# Paint_track

09-01-2020/: CMakeLists.txt
09-01-2020/sql/: add_object.sql  add_region.sql  create_table_image.sql  create_table_object.sql  create_table_region.sql  simple_request.sql  update_object_point.sql  update_region_point.sql  update_table_image.sql
09-01-2020/src/: _main.h  draw.cpp  form.ui  main.cpp  main_widget.cpp  poligon_draw.cpp  scene.cpp
